--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "pinia": "^2.2.6",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5",
+    "vue-router-sitemap": "^0.0.4",
     "vue-scrollto": "^2.20.0"
   },
   "devDependencies": {
